Docu and the Report for every transaction

--- a/ParkingSystem/Promo/Pricing.resx
+++ b/ParkingSystem/Promo/Pricing.resx
@@ -118,67 +118,95 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Register_Button.Iconimage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTAw9HKhAAANJElEQVR4Xu3d
-        a+hsZRUGcC/lDUKzMFOzrJPKMeKIwqkvoeSH/GAgplkfNEhKyIikkqORhrdMEyGiAikIsoI0S0u6qZRm
-        ec8isdLKboplalB28/SsWWvgz5ln73n3zN6zZ708D/zgsM563/0Oc/aZy77MTtu3bxeRBrQoIo4WRcTR
-        oog4WhQRR4si4mhRRBwtioijRRFxtCgijhZFxNGiiDhaFBFHiyLiaFFEHC2KiKNFEXG0KCKOFkXE0aKI
-        OFoUEUeLIuJoUUQcLYqIo0URcbQoIo4WRcTRoog4WhQRR4si4mhRRBwtioijRRFxtCgijhZFxNGiiDha
-        FBFHiyLiaFFEHC2KiKNFEXG0KCKOFkXE0aKIOFoUEUeLIuJoUUQcLYqIo0URcbQoIo4WRcTRoog4WsxM
-        GTfsOcmMFjNTxg17TjKjxcyUccOek8xoMTNl3LDnJDNazEwZN+w5yYwWM1PGDXtOMqPFzJRxw56TzGgx
-        M2XcsOckM1rMTBk37DnJjBYzW+dgffvC8XA2fBZuhYfDkzuY1m+Bz8D74U2wb0y3lsH6qkKLma1TsJ5d
-        4Vi4BO6E/8Gy+S/YXBfDMbBrbG4tgvVUhRYzGztYg+0UJ8AXwF4Jho5tw7Z1HOwcyxgtWENVaDGzsYJt
-        7wInwX0wVu6BE2G0HQXbrgotZrbqYJs7w1vh57AueQBOjiWuNNhuVWgxs1UG23sd2P/a65q7YWssdyXB
-        9qpCi5mtItjOnnAl/Ae65jG4Fi6EU2ELvBL2gxcG+7PV7O+sx3ptzOPQNf+Gy2GPWP6gwXaqQouZDR1s
-        41C4H0pj3zp9D94Dm2OahYLx9nbuCDgLboYu34rdC5tiqsGCbVSFFjMbMpjfPms8AyV5BOx4xwExvPdg
-        7gNjG7atkjwFJ8XwQYL5q0KLmQ0VzL0NnoN5eRBOg+fF0MFj24LT4SGYF3sMH4yhvQdzV4UWM+s7mNP+
-        8X0e5uUJsB1jzK9Y7S2YreEvMC+fgl1iaG/BnFWhxcz6DOazf3AlO8d1MNhbqa7BWg6C621hc3I19LpD
-        Y76q0GJmfQbz2TlQbfk7nBbtaxdbW6yxLZ+O9l6C+apCi5n1Fcx1HrTl1/CaaF/bYI2vhd/YgluyLdqX
-        DuaqCi1m1kcwjx17aIudTrJ/tK99sNYD4Ke28IbYB/dTon2pYJ6q0GJmywZz2HGOtq9yb4O9oz1NsOZ9
-        Yu1NeRqWPk6COapCi5ktE4zfC9rOqbLTSl4Q7elia4e2kyl/BntF+0LB+KrQYmbLBOPtlIymPAoHRWva
-        4DEcDH+0B9SQS6N1oWB8VWgxs0WDsZvBzltieRaOitb0wWPZCk2P9V9wWLR2DsZWhRYzWyQYZ8c72t6f
-        vytaqwkek50b1pQfwELHRzCuKrSY2SLBOLvQqSlfi7aqgsdl/yncMHmEPG+O1k7BuKrQYmZdgzF2JeAv
-        gOVv8JJorS54bPuDfXvFYmcsd34VwZiq0GJmXYMxdolqU94XbdUGj/ED/lBpToi24mBMVWgxs67BmDuA
-        5Vfw/GirNniMu0HTkfbboq04GFMVWsysS9B/NDTlHdGWMlh/8Zm66D1j8oh5tkRbUdBfFVrMrEvQ/0lg
-        sQuQ0r56YO12SfB34LIotcYeK/wWWK6MtqKgvyq0mFlp0Gv/KJqu8T4n2tIFa5/uHNNcHn/VGvSd6+0z
-        +RMUX/yF3qrQYmalQa/dxpPFriFfm2s7ugTr3nHnmOaKaGkMel4GTde4vzHa5ga9VaHFzEqD3iuA5cZo
-        SRWsu2nnmOYT0doY9HzbW2fysWiZG/RWhRYzKw167wKWd0ZLmmDN9k3UNyarb87XofWtEv7+zEnnbO6I
-        lrlBb1VoMbOSoM/uPdX0duIV0ZYiWO+8Vw7LF2HuTa7Rs2nSPRt727lPtLUGfVWhxcxKgj670TPL76Il
-        RbDe3naOadDbdKbvsdHSGvRVhRYzKwn6mk7UuyZa1j5Ya+87hwX9X5mMnM2Z0dIa9FWFFjMrCfqajn98
-        OFoWDubo/VY6OwbbKPnMYX+/WwwpDsacPxk9m6uipTXoqwotZlYS9DV9W7PUHdEx/uNgc+8Zpd5jc0Pv
-        rxzTYFzT9fg3RUtr0FcVWsysJOizS0tZjoyWzsHYjVcjDrKT2Jww2M5hwdim02/uj5bWoK8qtJhZSdDX
-        dFrFy6OlUzCOHVPpdSexuWDeznENLLxzWDD+kMlMs3kkWlqDvqrQYmYlQd9fgaXzD2RijP0MQlN62Uls
-        Dhh857BgjhdPZpvNE9HSGvRVhRYzKwn67Lprlk4fatFv9+0tOUDX+cPyNDYWBvlAzoJ5dp/MOJtno6U1
-        6KsKLWZWEvT1soNYMMZ+tNP+927LQq8kNgZW8soxDebSDrIBLWZWEvT19hbLgnG97yTWCyvdOSyYT2+x
-        NqDFzEqCvl4/pFswtredxHpg5TuHBXPaT7+xPBwtrUFfVWgxs5Kgr/eveS0Yv/ROYn8Ho+wcFsyrr3k3
-        oMXMSoK+m4Dl1GhZOJhj4Z3EajDazmHB3G+fbGU2RZcBoK8qtJhZSdB3FbCcHy1LBfN03knszzDqzmHB
-        /B+dbGk2c68nsaCvKrSYWUnQN/jJipireCcJo+8cFmzjy5Otzebd0dIa9FWFFjMrCfqaTnd/NFp6Ceaz
-        r0zb7l5oseMk845z2By7x7SDBtv5w2SLszkmWlqDvqrQYmYlQZ/9DEDTzZtfHW29BPOVvJK0ZSWvHBZs
-        5/DJFmdjN+8u+lkE9FWFFjMrDXp/AixnREtvwZz2SnLjZPZuWdkrhwXbarrktvgGcuitCi1mVhr0Xgws
-        342WXoN57ZXkS5MtlGVlrxzTYHu3TLY8mwuiZW7QWxVazKw06G36HDLYbX8wb+lOMsbO0XbbnzdE29yg
-        tyq0mFlp0GsnGtpN0Vg+FG29B3PP20lWvnNYsM1tk63P5vfQ5TamVaHFzLoE/ZcBi+04e0Rb78HcTTvJ
-        WDuHfc38Z1sAycXRVhT0V4UWM+sS9NvPrjWl6CYFiwbz77iT2J9XvnNYsN2zJivgOTzaioL+qtBiZl2D
-        MT8ClsF//sDmh+tgzJ2j7ecPfhhtxcGYqtBiZl2DMU336LVsi7bBgm3YV8Ar+yp3x2DbH7EH2pDjoq04
-        GFMVWsxskWDcncDyDzgk2qoLHpud2m6PkeX2aOsUjKsKLWa2SDBOP+I5G/2IJ9BiZosGY78FTTk72qoJ
-        HtM5/tBoboi2zsHYqtBiZosGY+0brabzs+xcpKOiNX3wWLZC03X5Vj8sWjsHY6tCi5ktE4zfePO3HWMH
-        zBa+JHddgsdg971qOkBquTRaFwrGV4UWM1smGG9fuzZ97Wt5GF4a7eliawf7/cWm3A5LfbWN8VWhxcyW
-        DeY4FJ6BptwD+0V7mtia4V57AA15GjZF+8LBHFWhxcz6COZpuoHzNL+ENF//Yq32da4d+GzKc3BKtC8V
-        zFMVWsysr2Cu86At9j5+a7SvbbDG10PTeVbT9HZAFHNVhRYz6zOY71Joi50afwEM/psgXWNrirXZGtty
-        UQzpJZivKrSYWZ/BfHYw7XMwL3Y+1dr8dDTWciBcbwubk6th5xjWSzBfVWgxsyGCedsOqk1jp2zY/9hj
-        nldl53XZGppOH9mYc2JYr8G8VaHFzIYK5j4X7MPsvDwIp0HrTy73GdsWnA4PwbzYYxjygrCq0GJmQwbz
-        nwxPQUnsmMnZMNhbL8xtb6VsG23HNjbG1v6WGD5IMH9VaDGzoYNt2JHoH0Np7Drv74PdrG5zTLNQMN4+
-        Ex0B74WboekachY7frP0cY55wTaqQouZrSLYjh1xt1+D/Sd0zWNwLVwIdrxlCxwMe8f0Nv/eUTsS3gYX
-        gY15HLrGzi+zHxcd7BLijcF2qkKLma0y2J69xfkqrGu+Ca+K5a4k2F5VaDGzMYLt2meT+2Bd8gAs9ZPW
-        iwbbrQotZjZWsG37fHA83ApjxT5nnAi9HtvoEmy7KrSY2ToE67B73NpReDtFfujYKS/2S7tHx+ZHDdZR
-        FVrMbJ2C9djpHseC7Sx3QZdvnZpip47YNfSXwDEwyt1QmoL1VIUWM1vnYH0vAruLin3la//r208f3A12
-        zORJmMb+bDX7O+uxXhtjYxf6odFVBeurCi1mpowb9pxkRouZKeOGPSeZ0WJmyrhhz0lmtJiZMm7Yc5IZ
-        LWamjBv2nGRGi5kp44Y9J5nRYmbKuGHPSWa0mJkybthzkhktZqaMG/acZEaLIuJoUUQcLYqIo0URcbQo
-        Io4WRcTRoog4WhQRR4si4mhRRBwtioijRRFxtCgijhZFxNGiiDhaFBFHiyLiaFFEHC2KiKNFEXG0KCKO
-        FkXE0aKIOFoUEUeLIuJoUUQcLYqIo0URcbQoIo4WRcTRoog4WhQRR4si4mhRRBwtioijRRFxtCgijhZF
-        xNGiiDhaFBFHiyLiaFFEHC2KiKNFEXG0KCKOFkXE0aKIOFoUEUeLIuJoUUQcLYqIo0URMdt3+j81Kgk9
-        Vu+NkQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAACPpJREFUeF7t
+        nW2MVNUZx2k1TdvUlqY18YvVpB+sfmqa1Jo2qa0vEauGrQtFFlmYe+4OskVAV2FZfAE2BG0tLG36gVa2
+        XRBEQGDLqwutpi8mvq2oIKACGiNU5a0V2Bcqp//nzrM4c+4zs7Ps7txzZs8/+YVxdube//957txz750z
+        12FeXl5eXl5eXl5eXl6l1sSJEy9JpVJj8O+8IAieBC/jv/eDf+PxMYIe03P0N3oNHs8F9J5LeDFefZFS
+        6moUbxGKuAvofkLLWIjlfZ8X7yUJBRqOrbcexdqbVbyBZg/WMzOdTn+NV+uFolyMoizAv//JKtRgcwLN
+        no9GfJNtDD2NHj36CyjCHBTjlFGcUnKSPJAXtjU0hC3+Owj/klGMJHkRjbiC7ZW3UPxpCNxhFKAw0xp0
+        ML9Fq9/v0GrZLh2u+1Cr9UdyiJ5reSPzGrw2NXWWvKz8dKAJabZZfpozZ87nEbLJCJ2fex7UqmmTVmsP
+        6XDz6fMD7w0WbdQBliWuQwBN+A15ZdvlIexjv4RwrWbYOIEOHlis1fI9ckH7gVr+pg5mN0XrkNedwwby
+        zPbdFg+2W4WQudTN02rF22LxBhK14i0d1M2VPeSy2fnBGR/lCxGk4JYfhJN08NttKM6pWLEGj1M6WLxF
+        p8K06CmLVjThAo7jnhBgsREoh2B6g1Yr9wsFKg1q5TvFDNaPcRy3BOMTjCC51P9Kh385IRampLQe1wG8
+        iB4ZHLmN51huCKavAiezQ+RgS/F7gJdemvBJGIZXcjzr9TkYft4IcA4KGm78r1yIAkzfflo/8q9O/fjO
+        Lr3mzW695e1c6Dn624LnO/XUNnkZBYGnXprwd8qWiWixYHSSYfwzcEIVbjgmF0CgZstp3fiPTv3k7m69
+        /cCZPrFyV7eeh/eGWIa0bAk6oUtNrZe9AxzNKY5pp6qqqr4Oox+ZxiPStVo99a4YXOKB5zr02r19L7zJ
+        2j3dejaWJa1DQq06qFM1k+P+MxweN27cVzmufYLBRsPwOdTv2sTAJndtPa2XvNr/wmfTBpa0d0XLltZp
+        onBYLGUgMCA/zHHtEowNh8ETpuGIGQt0uKn34/y72zr06jy7m7b9Z3TL6136Eezj65/t0FOe6dCTt2Wg
+        x/V/64j+tgyv2Y7XSstYjXGC1iGtOwd4De5rjOfIcBS7oos4tj1CA+4VzOpUEERnn2LQLKgw6/fGi0aF
+        X9Le3aeBdRoG7D/Qp0hoxPp9Z4pqAl0OIe9SJrqgyLHtEbaKfZJZurYjBcwmjYFS2t/TFns/tmzpPcUw
+        468d0dGRuVx6rpjBOWhYGMvD7ObYdoi+wxVMRoTLd4vhsmnALsUs0tJXu/SkPhzB5GMS9vvNODw1l1+3
+        o4hPQcvrYibmexw/edElXMGgDu59WAxmMhW7hG1Zu4vm17qiQ1DptecDLetPWGbP8mlQpnFDeq1JgUvZ
+        j3L85AUz4uwFuuAlhZKgQZS21EUvdka7JOk1/YGW2fRCV3ROMf+fxe/WVNPmWC5mJ8dPVhiQaN7OWcNc
+        NICFTx8WQznFmg9yc30GZb6Yy5CcsPupNIxloLNeKZCD5Ds7xsZXwWVITmgAzWyImQsal4phXEQ1Ph7L
+        xzzEZUhOMLHKMBVR7JmvC9AXRlJGsILLkJxgot0wFaH+vFMM4yKquT2Wj3mJy5CcYOI9w1REuOZ9MYyL
+        qKfei+VjDnIZkhNMHDVMRYQ0V0cI4yTrP47lY45wGZITTHQZpiLO50sXa0EWKSPo4jIkJ5joNkxFhBs/
+        kcO4SP4GdHIZkhNMDOVd0MdchuQEE+8apiLU6iExCO/nMiQnmBBnOdOhmxTGSZpfieUjcCb8ApchOcHE
+        E5K5zGw3IYyDRLPohIyghcuQnIIgeFAwNiQuRWDja+AyJKe8F+PuniGGcZHUL+vi+YAVF+Oqq6u/ATOf
+        muYIupQrBXIKnNFL2cD/0IDhXIZkBTM7DXMRwcINciiHCB5bF8sVZQuClzl+8oIZ8SvJcvhOIMg/e9qe
+        ryTxUfyuYDCCfrclBXOCwl/KX8Xx7RCa8JpgMjMTWgrnADShTMyUSrVzbHuEBuSfmLWs96kptlFoSgqy
+        2jcxK51OfxnmxIm59EsYpy7O0VT1/N8DHwJf5Nh2CQZnm4Z7oJ+LimEtRC1sFTMQKP5MjmufCk5PD5QT
+        A3K064FXMYPt09NJ2ELGC8YzTLk/urQrBbcB9fSHec96mbEc02oV/onS9Nk63HBULECiwBOdt0ieGTd+
+        okSqrq7+FgyLX9QQ0e/EWo/LhUgC+qXkzEdFr8wRcCnHc0PYFd0G0/Epiz1ga+vXfSAGCnjoZcsn5nIs
+        twTjBX+oTWOCWrFPLkwpeGKvDqbcJ3vLhSYe3MqxnBKNB0uzgsQJ01ot3qrDTSflIg0GWFdAs55VjexJ
+        xs0mFHuzjuCeh0pzmIrDzL7cvsbA2SZcAON/zAqSl2DWrwfl0gXd6ImuS0nr7COnML79hKO5I7oJEozT
+        rSilUHESumFTkTg7JtDR0Y0wfzgrTO/gKCW6ZRnNuG5+RatVB3S47iMUmX76CvCYnlP0N7zmPG9ZRp5S
+        8Hco6zmR6gkT9fUjR31aece4Go7llpRSl2Fc2CGFS4jtdO5C3uDrikJNGF89Qf/4ltv1D24aqX94c8XZ
+        kWPG1kahXBSC0rnCQTNkqcD6D5AHtnNO+ZqQXfweqAkVY6om81vdE8JehHB0FZXONnMCDyK0rlm1tbVf
+        YRsxmU2Qil82TSBRIxB4JsIO6q2LwQxaF6+2oHqacGeB4vdQFk3okU037x4fhldee0tlt1R0kx+hCaPG
+        3hnyW8tDKJx0+3qaEJx9Y5Dj9Bz9jV6DxwN6+/rrRo4KrxlRcVYquklZfRJskm+CBfJNsEB9bQLOE8pr
+        TLBBvgkWyDfBAvkmWCDfBAvkm2CBfBMskG+CBbq+YlTdNSPkopv89LbK43iLG5O9XFIxn4Rrb608+bPb
+        qy7jt3gNtAo1wRe/RLrh57+oMZtAxR9Rccfl/BKvwVZ2E3zxExI1AcU/dnPFmG/zU14lV7n9z+G8vLy8
+        vLy8vLzKV8OG/R/rpjCemopOqAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Promo_Logo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAACaNJREFUeF7t
+        m3twVFcdx/FZ9Y+Wioit1WlF+5iO7bQgmuwupFqqRUtLgfKopRpG0Y6VcRy1tIr3bhAIaSmNSIvWUYIp
+        YUOllWT3bhLyfr+WZB/Jbnaz2bwTnorakUh//s7Zk83uvWdv7mZ3k2Xqb+Y7Ye8953fO53fel3vn/d+S
+        bPqiPTfqLMJqg2R8Xi8JR/SS2KiTRD/+vYgCpovsWiNJQ9NaxUdIXubm2rI0q3Cn3iLsQaAzqKsMciYi
+        eW06SfiNzpJ1B3Ofmrak9fCH9JJxC7ZcgwwiYTJIYj3+fYqUxYqde7vbJHwYK7UdFZis6CyoTycZfzTn
+        gUgvER7SW0Qfp4KzJa/OKq5k1Zk9SzPt/ygWfhD1blhl5kpXdRYxN6NC+AirXnLNIAn3Y6FuWSVSQd3L
+        zcb7WDWTY6S7YUH/lBWcSrpssIhfY9VNrCH801jAf2UFpqKuYF03sGonxnD5eRQdT8gKSmVNkI0Uq358
+        hl3q6+jwiqyAa0H/iXuF0BcLt6Oj8C3rtaYL6easxQwnNvuyWbgeHaTibB+r7EtOCR9jWNoNx9DrHGcp
+        o5WoVVaBe08uXLpfZVjaDE9k3+A5ShVlInhrnQge2x54u34XN41ceNp8gOGp28Pm3Oswg0fuYLaUIRmx
+        dbNCWoG/w+9vRXhbnRF6Hdngd+yj2nQ6KyJNFDk0nR3wkPEDTuakaIVVhAO1+VDeXgpOZz343C3Q77VB
+        v+9MSH097eB3t4HX3QxdjjrwdBQifBCcyGfPhlWlkUGKJtwyb2WYfGOtPyDPmAw9VpoNTld9BOy08hSF
+        wCfhf1yhqfUnFSCnV4arNL3VmMnJlHCtLd0HXa5GPmQ09Zhl8PtihaciO1qGqzRMYJNnSLTWluVAd1cT
+        HzJcvR0wNuSFseFeGPBJEfB9zv2wtyKH61+DWhlupBkswj2cxAkV6fZdrgY+cJgGejvh4tkhOIO9pMde
+        iNA5YQF4CYb8DfCM9DK3DC3Cee5uhj1lBqu4m5c4UdIKT0RavsPVDNtKRPB1Ts32BH6kvwVGh/pgu/QK
+        txwtwrONkWFPGW58OnmJE6FY4InGsdtX2atxSRTAjms97fYMfnx0EIdFAH4u/ZZblka1MeygGcy7F+LF
+        pDzdiRWeaHTYB5fOj8GO+iOwpRK7fKAKzg27KXwwAP3wgnSQW55GXV1WtnsBw8fWt4hrOIni1rqyF7VN
+        eJPCiW9k0Echz40PYxDG4dKFs3D+7GgIPhiAPnguvgDgnkBYzfDJ5kcQeYni0Rq61MXW8iOD3gjQaCJz
+        wE+lXG65WmWQjDsZPn3gUcBLNFM9gS3vjqHlB3oRfijY8lo03O+FbXGsAkEJ+Qyfrv9tygQzE9nkdEfZ
+        5HR11ICtqQwCEdvdqW6vVQP+Ltgk7eOWr1XY6M0MnwYgIdtftTHvbK+CSmshVEomcNunhsbIUC8XUk1u
+        Zws8KGk7BaoowPBpAC7Jbsas4Jjnt7wjDL651ow9INjtRwdjhx8fHQBr7dvcOsSoCwyfBiCup72q8G0V
+        FJyotc5C4QOeNvy3FdobyzmA6urzOuBZ6QC3HjFqIkgP8D78MeMAqE14kfAShSfH28aqYnqtquQEjI0M
+        cEF56vM5QJQOcesxA7EAoOGPGQ0BNfjO1nJ1eBwSPncHBRvFnd10gUgwPFHEEIh5EowV3o/wDZWnGPwJ
+        /O2gYN7uDhoMW1P04ZAEeKI+hk8DENMyqArfwmt52xQ8dns5PLluizIfJAlevgwK+bxEPKnDn1bCe8Ja
+        Pgy+x2ULwbfVl3KHQLLgmfIYPtkJGndyEii0Etdeh5P/GIsHH9HtY4Tv73VBTskfSEtx6xK3rOILDB97
+        gMbDkKWlOAp8WLevDS514S1fXfImtqZLM3zA54Rs6++TB4+KOAxlVAjz8aLqUkgeUfd2tyjgva6mEHxz
+        TTHC21IeHjXxYOneGxh+0PCi6kT4uLQXfN3NigD4Pa1QV/4WdnvS8kH4xsqiKXhvysETNTHsKZvukdgD
+        khHamksVAQhXAGf7xmozhSRLXa9H+5iPBp8u/RruOvlD+NSxJ2D+0Ufg+rxVcOPR1fCZ40/CPX/7CabR
+        9t9j4SLHf4Y9ZWmS8Hm8qfpUiDyH8zj4k+AAnupcHY0zhjdaX1WUd/+pn8GC/DUUOppuPrYRvmL+pSKv
+        it7NsAi3MuxIw5s1ssQK5Zb8EdyyIBD40eE+GOr30Q2N3+uMCX6vdFjR8vch/Py8b0XAGoqehZzOAlhs
+        2hxxfWH+45Bm/lVE/mjSSWIVw1Wazio+ycsULlLR/SWvYxCCR1ryCJs8opKD+Tz2EHxzjUS3u/I0BJ63
+        zqdbdsKCvzwaAUlUO2oHYi/Zjyvu3VKwWeGHJ4PFuJHhKm29yfQBTDTtOwGTQfA4m2BsyK8AI2prKNMA
+        r+z2RLf/9fsKQKLWs24agN+5TnLvkyHD8xcmxzxBeD/D5ZvOIm7jZFSIBOHg6T/D8CA/AIN9PdBlb+HC
+        9/u7cMy/xvVL9Mk31nEBpwvA4hNbuf5CshozGaaKYYQwcaMiM0ckCLllf4LhAe2PtNRanghnaLgh75sU
+        aEXxdtrtbed6qP418Q4NwPg7F0PXLANN8DnTJpr+5oKNXJ9EWNf6aVt/0jBSSzCTpmcEwSBgT9AQhECv
+        OjxRmnlnqEUPdb1Fgaez71bvpekXvbGe6xN1ZXmx8YsMT5vprcIrHEdcaQmCFvigsAccDc7+d57YQie8
+        lx2FVCP/Pk+B2895QteybHmwKP+xYA84vonjj+pFhqXdgq+/i3UyR1FFgnCoPI8+spbD+70OyCo5zM3H
+        003HNoR6QbimmwO+8Ob3eP5qcKv/QYYVm7HNkebX5EgQCKjb2Yp7Ai8MBTzQ0VYNO6SD9B4vD093nXyG
+        CzhdAJYWPyf3dX65Nes2hjMzM0jCMnR0WeZYVRulbNglvQZG7PJr8QzBS6MmMhEuzF+rACwZbKEBMNqO
+        KO7dZvqO3M9lXYmwlGHEZ9h6s/6q7JeKd8DHZZuhOwq/DZnV2aExP6mbCjbQM0NY/sS9Kjtp5C1sdPyP
+        sEKSrmXFz9NDUDisXLeanpbD/325Vfgqq3ZiTW8R9FjAhbDCZkEC3Iunvs+atmDLr4NP4OFo0bH1uOnJ
+        hKVFv5CnxzEvpLPqJscyzMIteotYKys4FVSTdmrXp1k1k2sPm3OvI5+pYKHxfBKXKJE6HFB9/S1ZppeM
+        985tbzCWzv33hLi/Zl+TzObrtd2opzTv7WfDyFGaPk9I+oeTxs2kLFZsatp78tPZaPae/Hj62rF58/4H
+        dn6PHinAcuYAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="DataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
