--- a/ParkingSystem/User/User_List.resx
+++ b/ParkingSystem/User/User_List.resx
@@ -250,4 +250,123 @@
         wQ/WPwR/LAiCIAiCIAiC0CTEYv8D+SB80WND75IAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="User_ContextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="Register_ContextMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAnFJREFUaEPt
+        mc9O1FAUxotiXKgEN5ogib6DkYUrViS1U6YdgrwBL+DChZvZGMNOAxpJfABDmHaMBMMKXwHClgVRCMFg
+        4kIz6gK/a84kw8m5w5zS6XhNf8mXLuac73ydaad/rldSUnJ+6vX6hUoaTQRp9Ajbt2EabWP79ZSSeMt8
+        ZmrCRu2e6aH2weE3auMItYBwn7E9UepTpVl9VnlfuUV2xRGsBdcRYBFqdQTKqhZ25EWURqNk319weDzE
+        0CMWIg8dwnuGxuTP3eX5SxiwLAzOVThHXppZNDYfZldmr8J8gw/rl8Jm9cPUxtQVGn8+/HX/Mkw/8iEF
+        aNPMphjZwWHzSjAvRji5KUY2YDAnGheozCf29LvpMRh844YD0HGcxDcoVu/g3+CNYDYQBUn8mmL1Bi4q
+        d9D4mxtpxJFqehUOo18PGrXbFO9s/l7iBSONOFKNRmESP6V43ZncnBxGwyE30Ioj1Si1j+vRRYppJ2hW
+        7wvNanGkmgyaoJh28FM9ERrV4kg1WuHLfUwx7aAw5Y1ZxJFqMmiVYtrBvf2O0KgWR6rRCv9G2xTTDgqP
+        eaNNeSF5W/SFYtpB0U/WZFVeSN4WtSimHXPREBpF5YXkbdHZO4Aixw+h/+AkXuWNWcSRarQKm9EKxbTj
+        /IXM+VsJesu2xxrV4kg1Su16J94QxeyO07fTBjxO3kTTD26iEUeqUei7+rESv8KSYDQoPadYveOv+yP4
+        3z0QzIrWPo6IaxRLh9OvVdrAwN0XWwbzHIrbi0Qc0Efhi2vktgji9MvdNk6/Xu8EO+HmAkcnTi8xdeLs
+        Ih+nyzJrO+y/ucxaUuI8nvcH+wJr+D/zjXUAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Update_ContextMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABRBJREFUaEPt
+        WWtoHFUUXp8t/vEtKAhFRZSdO02MRUGwIRt3N4pYW0Pr29qCCBpqLWps8YdIURFsRMW2lt0tptWkVUFs
+        kLQ7s0mqgmlEk9WgNb6i1DZtrUaTzI65njM5u52Z3Jmd7M5uupAPPnZ37rnnfGfuY87cDcxhDnMoHlyp
+        PTOTDN6UUaXmjMragd8AjxFHdJUdhM8vNFXeDnx0okuSqevsYrybXZFRpE0g7hCQz5BpTWGP8c6ac8ld
+        +cD3y5foqrQVRGg2UYXwhKbIa3AUyX1poafkByEoTg2RmGLYr6nBRRTGf/B08GxNlRKCwETpiK7Ib+sp
+        do/WJV+Ho8S72fnIMaVqgZaUbwC7p4CfADMn+1k4hjeIQvoH3ltzDjjvsAXLsg8WaSPYnEXmecF7qi/L
+        qPKz0PewzRdR3kimxQOFgdM904Owf2FEmjgPnE6mMwZXqs6jTUC3+QZKzWRWHHBaTHfOhv2cr3pSug18
+        nrDFmNRUtpJMDGhKsAoTpp/5ATvN/TanyAM4BcjEN0wosgS+/7DF+me8e+HVuKbge6dxTZFfoS7u4F3X
+        XgodLHcFH0h87zUXkonvoCRGzDGBx4GTud9JtpjM3aEr7K1cpymOaqmF1dRcMuhJdoctrpkjvK3xDDJ1
+        Bk9Jl4PxhKWzIq2j5pIBRx1GeTPE+88SmwhropVM3QE7wMu2jr9wZcF8avYd+KzIKOxFiDVqjmunrsp3
+        UxdnGIWZyn43d9RS0ipqLgmwJrLHFDDDPw1eQF2cMVVVWjoeL+XdzwKfJzAK9RCvDSh4LjCFTN0BTjaY
+        O2IJTE1lw/g+6cqpKSUdMWlZS83uAMP3TZ1w+jxMTWUH33PVPCxTMim5B58HdNkdIDptSUCRrqemygCI
+        PmpOgCs1F1FTZQBEW/Z/LKOpqTIAoi1vWTMpk08JgOiKn0IVv4hPmW20IMCeu96SQBkeZA2vNcwLJaL3
+        1SUiu0Px6A/18cgxJH4PxSO7QvHwvWhD5u7QFPlGcwLAkpYSoUT4LhD5I5Dn4RAktYy6OcOoSVT2qzkJ
+        SGo1NfuGRqjr4c62CIS6EpJ4FfuSGzFA9EvmBIDDeDJBzb4AxLxuF+ed4RZyI4b4hYZtoOaiEYqFl4iF
+        eeZkXSx8O7kTQ/BKOY7rg5oLRm2sdj4I8DLnc7wlEeXPJZt5PXyarg+5LmzeVX0xiLYfIf5W7IkE3P0V
+        JhF5Gd5+K28b2MYPHv2cv9e/DZJpyLXVxaKN5FYMh2OVvmKSCMUi75oFuhHvfOtXWwzxWa7f+3SuHbbd
+        /O/Ifh9swS7yvVkkcuUHD/E1HY9bronEx7980zqNEpFBcusMt6NFPKmYabEHgf/OCQCu/nAV7z+k8u9G
+        PuPPdD5pXMNp0z4Qs4jf0tsCW6hlDSD/IrfuwC0UBDsd7g7CKK3wmggEHc0KQEH7hnbnRA4e3s/XdjTx
+        HV9vtYiP971hX8BZeksAUdDxOg+chonhmsHjdU1lTyx/p94yAnfuXMa7f/rIIthMhztvsC4e+ZbkeUex
+        f3A8337zNCFOSbiJR3paxCIU8xdT58eLhGIwiZ6fTyaxuXeTq3hk3m00Hwr5k29MYfyB1pBQ0FJKwot4
+        4EDemsgrHP5m/ZNEY0kyDDyAa0hLsUfW7VzcJBBkcMmOpV7E5y8lSg0oyDYKhHkiPEteIDezh5KW0+WE
+        7y80swHjlXKqyEsA08AxYjoUi8YhyeXiyjMQ+B87O/+9AB0VGwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="DeleteContextMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAzdJREFUaEPt
+        mUtrE1EUx+MLFz7QjYIKunAtQp2ZtulimEkDXUv1C9htXXRRQbB1obWuEnyg4AcQW58bEXxUv4HFrQvR
+        SmmJr2SSSdL2eu54pqR3zk3mlcSB/OBPKXPOuf8zuXdeN9WjR4/osOnU9rJxRi2ZykTJ1B7C38VSRv2x
+        Rab6EY9NWKai8BxM7x5lXTsGxmZB30AsoL6WDG2mbAwcxXKd49fQ0EEro94CE7ZgKoyghpb/qZ8+gOXb
+        SzGjnCsZ6gphJKqWixntLA4TP6yvb1fRVO4TA8cqy9Tu8LFw2HhY0fW9sBBfUQO2SS9Z9tQeHD4abOTk
+        bpgyC8QgbZbyjo+NNsJjGepdeoBOSMujjXDAnD9PF+6cQi9sazh9BAr8Fgt2QYVidvAQ2vIPJD4QCnVN
+        RVO9h7b8UdH7T0BiXSwk1XA/q1wco48RcmIhhzomUa1iDB5He63ht3iiCK3sAKt/eMvYxgazczfomAZV
+        c7NObP39GyeXiqEEv8I1tNccpus7IWFZLECKmwcjm7RowjXvUl94HaAJZYmNju5Am3L+GMogXcCryvgY
+        Y+vraAeB/+3rVzyx9swUGVsev+CJlYk/8aJNOXDdv0wly2RfvQSnso6OEDjL/Gy7MeKZd4Ace3pyS62W
+        MtRJtCkH5tpTMrmJmjURm3kQvEfMo005EPhJTPQjbsjTBCcm8/+kLKJNORBY8Cb6k7QJl0jmHa2iTTkQ
+        VBWSAslpQlysHL64o5nnstGmHAiqCUmBRM55Dq4JKieAfDUQegpJzbtEb8LXFAq1iKv5m17za2swdUCN
+        RGrCxyLmlyo6WS7SPC5YcmGHbMLKqI/QppygN7Jm5t2Y2JrwcyNL/KME/2IGwV/EZFIZjdWez6EbgJ/5
+        KfmlUvwlas/mnBpUrCh4QvjMUqltaLM5gR6neRMv5luad+U2wRv3a57L9+M0B16mD0NSWSwiVftfaKzA
+        r5VwNbpNFOqSlBza8k9hRNsPyd+9xTotZWk1nd6HtoKR6M8qLon+sMXh76FwBXhCD9A+WYb2OLZNkER/
+        3HVJ9Of1RhK7wdFIoreYGknsJp+IdJvVNfu/brP26JF4Uqm/InMlU+4Q870AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Refresh_ContextMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAABLZJREFUaEPt
+        md2LVVUYxt85Z/qwD8ioJsEIKugTLyKlkkKoP8BirG5yKmlCy7336GRRFCMoWigEIeKFXmjRBxRRXYhd
+        RJCR0YWGyYBdDDFN0ZQlNXgyafVb+7zO7LXO3p69z2y3XpwHHs6Z877PWs9ae+31NdJFF13MHmZEamZI
+        FplAhk0o78Lv4LEEf4NfEx9UyfkBs1rmm0hew9w4NG0ZyCsqPbegt6/E0Juw4Rhsx0iWahHnDvTiI5j5
+        tcVcHg7JDVpMDBPVDpqwvt8EtbfgBr6vMEHvAzbPDMoFmlYOGOcX0oM7Uo01+Qfx3Xwuhwthn1kpcxlm
+        V2PodmJLjEiPFhfDhD17TVhDm8pTNHCMnM/5vgu+aoL6QyotBrNKLsPQPkjBLTzMU3ncPCEXa3puYGqj
+        ms3DSTrhTpXmh32UmKSnWoz/hfHVZpnUNbUwTFTvTzGaxgme5G0qKwaMbveMW47SG7dqSsfA1I0pZhPs
+        sZ/j5jm5RSXFQA8/1mI+koNmWK7RlFnBvhMY/NM1fZrT9UWaXgzWJAX8Pl1Qk0dhn6aUAmaeL1zjtted
+        Oic7qpPe3+kVNMVvd2i4NDDTvOE2AAbyn1M3s5+m54NZI9chPOkUEsqQhksFU+OA14BD1LXJq7tBI+ap
+        pD0QbPYKGGUd6NVwqaDsBdPmg/qBeO2wa07r9mS9Ss4MOy2S/JMjjuQpDZcO2zGYP8G78BX1XKE/24at
+        dTyEMuEvhKlg/N3rCY+zFlyi4bMCGvA6k8al+mcMs04up+6/HS953kF64WVHFMrbGqoc1P2J4yWSNRrK
+        BokfOqJQVmiocmA48rx8oKFskHTYEy3UUOWgAYs9L99oKBskuYvXWrlKQ5WjudVIeAnlRw1lg6R/HBFT
+        moYqh77IyQac0FA2SPrXEXmzQ5XgCVzkeGE3oKFskMTmKiHyTlFVQvdjyQb8oqFskPS9I2Jd0FDl4CW+
+        x/NyQEPZQPSRIwol0FDloO5nPC97NJQNkl7yRHs1VDnozPc8L6s0lA3G/H2eaMqeiTUcw77YLP+b9M+z
+        gmYdHFuTXvKczJg2ayT/7AhDeUHDYtcFNl7f0oBG6VcfCVDn056HQxpqDx4dhwxHPGFvHfh9HsZ5yU/v
+        3WWBSkqFbqd/SNRf7GjJMLoJ0SmngFC2YHp0xny8fx9QSalgtlnn1T3pD+O2QJRyGxHfEsyQ46CmlwYW
+        r7upi/NBot5AhjWcH7T4WsTeod5rAAdyTS8FepT1378jHb9riF+cKcg3H/N4rlNSDphn5Xrq8XfCDYbz
+        XZpSDAgXYfBY03iq+SbZMaqkY2D0fth6YRzJSk0pBrt9wFzGhZPHqN6vssLQmW0Es/4NiB33WzWtGMxQ
+        74MY4yyaYjadG1WaG7HxQJ7E/FiLcUv7T5NOhyY9+jCzywjczUv6JQYnPMMeez5VaYz4VsOu5vaO326H
+        m7ccffGQDGSA73ugu+Od4RQs/wgbX31YQ/bpBPVBjG+G7+uKfETTYmDg5oShItxPgzu7gS4TPP7+FHNn
+        ol1xl5c1m80amFmfMJfFBsPpYz6X2aer0vMDmHoUboPvwH0Y/SxmKLvg8zyhJQzHOZreRRddzAoi/wMN
+        0HIjzzKtHgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Userlogs_ContextMenu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAABURJREFUeF7t
+        ml9om1UYh9MOtwqdIIjglTdeOAQ3BRG0usGUglh0/gVv3K3eKAkbG8hWFdxay9CLadu4C2V45dYWVlaw
+        XZqZzOrYWjTJ0LEpY9uFE9F0KeK2Hr+zvV+bvXmbc5Ke7yXpeR94bna29vc9p0sKbUwQBEEQBEEQBEEQ
+        hHI2bRl9fuNLo+c3bhlVnnvu6ZePPgdZ+Ag+8QU0xGd/hyx8ECO8FrLwQY3wWcjCBzXCZyELH9QIn4Us
+        fFAjfBay8EGN8FnIwgc1wmchCx/UCJ+FLHx8e/6aEheFLHxQI3wWsvBBjfBZyMIHNcJnIQsf1AifhSx8
+        UCN8FrLwQY3wWcjCBzXCZyELH9QIn4UsfFAjfBay8EGNsPG+7T/dpumcW7zHVsjCBzXCRtMD43Nu8R5b
+        IQsf1AgbTQ+Mz7nFe2yFLHxQI2w0PTA+5xbvsRWy8EGN8FnIwgc1wmchCx/UCJ+FLHxQI3wWsvBBjbDR
+        9KaHz7nFe2yFLHxQI2w0PTA+5xbvsRWy8EGNsNH0wPicW7zHVsjCBzXCRtMD43Nu8R5bIQsf1AifhSx8
+        UCN8FrLwQY3wWcgSuxiPb76USOQvJxKXLyYS7wUHLXDkFmqEz+omQfQXA/8LLkCVeUB1d7fejOYSaoSN
+        pjc9fM4t3mPrEvFvGY9/4fwSqBE2mh4Yn3OL99g4lruiCh/1TJPxweDl6BOnL0fUEBtND4zPucV7TI7l
+        /lDDqRNq+Fjmar7346qXEJh09j+BGmOj6YHxObd4TzUX42dBxkugBvlkZXxwIlPK9/QWiPALBu8VOyBj
+        /VCjfPFY7jc1kvq+Mj44MpH558yevTkqPvgnZKwfapgPzkwdVjcG29RkaoiMv2hmLt/blyfia3OQsX6o
+        cSvdm/EHVivVHwtsre8S4vFS8BLUARnrhxpoo+lND59zi/eE3h4/tFWljZeQLeV6+8I35uKlbduehITL
+        gxppo+mB8TmnD+4uVOzR0vFrvIS+fVln8TXUUBvxQ5vOuVz3/hl1cLpUsad6/FvO969S6SPJE0T40LmR
+        8cyzkM4NeKit+MFN5xyu6y6or07XF3/RlvnvRvdPEvFnD6cyy3/Nx+CxK83a4odWXEI08TXU6JViffFD
+        Fy5hdng88xTkcg81fCV46uRRdSN5JxG2Flvmfhzq2QypooEa3+zOTB1axlf+grPqs1h0X/kh1APYiN8A
+        TeeufWBXXiV/mK34vE0VX4MfwFYcxHTu0qW/22my+Br8ELbiKKZzV0YZ/3qyXbHG1+AHsRWHMZ27MOr4
+        J0+l5LciatVlfP3xIAsf+IGayZmpb5zG10IWPsofqJmMIr4WsvBR/smbRWfxT09WfGzIwgce0OhGGV8L
+        WfigRjSqOv78wB1kVFurxddCFj6oEY0oR3wtZOGDGtFocsXXQhY+qBGNJGd8LWThgxrRKLqJv9Y6vhay
+        8EGNaASPn72gioc2kFFt1T8P0D8XoD7+UkIWPqgRjWDu5y/V9eN3q+LQI2Rck7V+5YdCFkGlVx9Q6TUq
+        8Ko62DpNRa5iUQ3EovkZri8E4c/BBdR6CUX1eczd7+34iJpou78sfi2XIPFdoNJtbxIXYLoEie+KT3c9
+        PPX3WDt1AVrqEiS+S7pe6bz22hvPqCtH7qIuQFsquwSJ75L93es7Hu98QWmNl/D1qqzEd8yH2x8bDC9g
+        iUv4JbA/+Db1dZVtvxf+meCKd97q+LX8Arpe7fx3785Hx9Xkmi6VWnsP/DUhKrZu3fTXu28/UdizY8O+
+        wQ/WPwR/LAiCIAiCIAiC0CTEYv8D+SB80WND75IAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
